Trip Info and Individual cost

--- a/js/view/partial-home.html
+++ b/js/view/partial-home.html
@@ -1,6 +1,22 @@
+<section id="tripInfo">
+    <table class="rwd-table" width="700">
+  <tr>
+    <th>Name</th>
+    <th>Description</th>
+    <th>Money Spent</th>
+  </tr>
+  <tr>
+    <td data-th="Movie Title">Star Wars</td>
+    <td data-th="Genre">Adventure, Sci-fi</td>
+    <td data-th="Gross">$460,935,665</td>
+  </tr>
+
+</table>
+</section>
+
 <section id="pricing-table">
     <div class="container">
-        <div class="row">
+        
             <div class="pricing">
                 <div class="col-md-4 col-sm-12 col-xs-12">
                     <div class="pricing-table">
@@ -11,17 +27,17 @@
                         <div class="pricing-list">
                         <ul>
                             <li><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Name</li>
-                            <input type="text" placeholder="Your name" required="" ng-model="name"  />
+                            <input type="text" placeholder="E.g Fenny " required="" ng-model="name"  />
                             <li><span class="glyphicon glyphicon-text-background" aria-hidden="true"></span>Description</li>
-                            <input type="text" placeholder="Your name" required="" ng-model="name"  />
+                            <input type="text" placeholder="E.g Hotel charge at Langham" required="" ng-model="name"  />
                             <li><span class="glyphicon glyphicon-usd" aria-hidden="true"></span>Money Spent</li>
-                            <input type="text" placeholder="Your name" required="" ng-model="name"  />
+                            <input type="text" placeholder="E.g $850" required="" ng-model="name"  />
                             
                         </ul>
                     </div>
                 </div>
             </div>
 
-        </div>
+        
     </div>
 </section>
