--- a/js/view/partial-home.html
+++ b/js/view/partial-home.html
@@ -43,9 +43,9 @@
 </div>
 
 <section id="pricing-table">
-    <div class="container">
+
         <div class="pricing">
-            <div class="col-md-4 col-sm-12 col-xs-12">
+            <div class="panel">
                 <div class="pricing-table">
                     <div class="pricing-header">
                         <p class="pricing-title">Add your cost to the system</p>
@@ -69,5 +69,5 @@
                 </div>
             </div>
         </div>   
-    </div>
+
 </section>
