--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
 
 body {
-	background: url('/assets/rainbow.jpg') center no-repeat;
+	background: url('/assets/rainbow.jpg') no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -17,16 +17,17 @@ body {
 	margin-right: auto;
 	margin-left:auto;
   width:40%;
-  height:100%;
+  height:auto;
   float:left;
   padding-left:2%;
+  border:solid 1px red;
 
 }
 
 
 .rwd-table {
   margin: 1em 0;
-  min-width: 300px;
+  width: 100%;
 }
 .rwd-table tr {
   border-top: 1px solid #ddd;
@@ -120,7 +121,7 @@ body {
 
 
 .panel {
-  width:30%;
+  width:40%;
   height:50%;
   margin-left:20%;
   margin-top:10%;
